# SQL-Challenges

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
Analyze-Airfare/: airfare.ipynb
Home Value Trends/: home_value.ipynb
Home-Value-Trends/: home_value.ipynb
