[tool.poetry]
name = "sql-challenges"
version = "0.1.0"
description = "Workspace for SQL challenges"
authors = ["Madhav Achar"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.2"
ipython-sql = "^0.5.0"
sqlite4 = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
